# function_traits

./: .clang-format  .gitignore  CMakeLists.txt  build-and-run.sh  project-cmake-rebuild.sh  readme.md
include/ruak/: param_pack.hpp  utilities.hpp
scripts/: gcc_build_project.sh  run_clang_format.sh
src/: main.cpp
